--- a/project/src/main/res/layout/fragment_results_gde_flights.xml
+++ b/project/src/main/res/layout/fragment_results_gde_flights.xml
@@ -79,7 +79,7 @@
 
     </LinearLayout>
 
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/histogram_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
