--- a/project/src/main/res/layout-sw600dp/fragment_tablet_waypoint.xml
+++ b/project/src/main/res/layout-sw600dp/fragment_tablet_waypoint.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
