--- a/project/src/main/res/layout/fragment_tablet_results_flights.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_flights.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <!-- BG FLIGHT MAP -->
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/bg_flight_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -37,19 +37,19 @@
     </com.expedia.bookings.widget.FrameLayout>
 
     <!-- FLIGHT LEG CONTAINER -->
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/flight_leg_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- LOADING  -->
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/loading_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- SEARCH ERROR -->
-    <com.expedia.bookings.widget.FrameLayoutTouchController
+    <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/search_error_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
