--- a/project/src/main/res/layout/fragment_tablet_results_trip_bucket.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_trip_bucket.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.FrameLayoutTouchController xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.TouchableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
@@ -22,12 +22,12 @@
             android:text="@string/your_trip"
             app:textStyle="light" />
 
-        <com.expedia.bookings.widget.FrameLayoutTouchController
+        <com.expedia.bookings.widget.TouchableFrameLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.expedia.bookings.widget.FrameLayoutTouchController
+            <com.expedia.bookings.widget.TouchableFrameLayout
                 android:id="@+id/trip_bucket_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -41,6 +41,6 @@
                 app:svg="@raw/ic_tablet_trip_bucket_suitcase"
                 app:caption="@string/trip_empty"/>
 
-        </com.expedia.bookings.widget.FrameLayoutTouchController>
+        </com.expedia.bookings.widget.TouchableFrameLayout>
     </LinearLayout>
-</com.expedia.bookings.widget.FrameLayoutTouchController>
+</com.expedia.bookings.widget.TouchableFrameLayout>
