3564: Added touch feedback to the hotel details header image

--- a/project/src/main/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/src/main/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -222,13 +222,21 @@
 
                 <!-- Hotel image (#1822) -->
 
-                <ImageView
-                    android:id="@+id/hotel_header_image"
+                <FrameLayout
+                    android:id="@+id/hotel_header_image_touch_target"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#2a2a2a"
-                    android:scaleType="centerCrop"
-                    android:src="?attr/hotelImagePlaceHolderDrawable" />
+                    android:foreground="?android:attr/selectableItemBackground">
+
+                    <ImageView
+                        android:id="@+id/hotel_header_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#2a2a2a"
+                        android:scaleType="centerCrop"
+                        android:src="?attr/hotelImagePlaceHolderDrawable" />
+
+                </FrameLayout>
 
                 <!-- Gradient mask over just the hotel picture -->
 
