Some map tweaks
- Use a `FrameLayoutTouchController` to block touches to the map. Easier
  than disabling all the ways a user can interact with the map.
- Set an `onClick` listener on the map container so we don't have to
  implement `onMapClicked()` and `onMapPinClicked()`. Any tap to the
  area will trigger the event
- Disable the current location controls. The user cannot interact with
  the map so we don't need to provide controls.

--- a/project/src/main/res/layout-land/hotel_details_main.xml
+++ b/project/src/main/res/layout-land/hotel_details_main.xml
@@ -46,7 +46,7 @@
                     android:layout_height="@dimen/hotel_details_map_visible_size"
                     android:layout_margin="12dp"
                     android:background="@drawable/map_frame">
-                    <FrameLayout
+                    <com.expedia.bookings.widget.TouchableFrameLayout
                         android:id="@+id/hotel_details_map_fragment_container"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/hotel_details_map_total_size"/>
