--- a/project/src/main/res/layout/fragment_tablet_results_trip_bucket.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_trip_bucket.xml
@@ -25,19 +25,22 @@
         <com.expedia.bookings.widget.TouchableFrameLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical">
 
             <com.expedia.bookings.widget.TouchableFrameLayout
                 android:id="@+id/trip_bucket_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:layout_gravity="center_vertical"/>
 
             <com.expedia.bookings.widget.CenteredCaptionedIcon
                 android:id="@+id/empty_bucket_view"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="@dimen/results_list_header_height"
+                android:gravity="center_vertical"
                 app:svg="@raw/ic_tablet_trip_bucket_suitcase"
                 app:caption="@string/trip_empty"/>
 
