--- a/project/src/main/res/layout-sw600dp/include_wallet_button.xml
+++ b/project/src/main/res/layout-sw600dp/include_wallet_button.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/wallet_button"
-        android:background="#88000000"
+        android:background="@drawable/wallet_promo_bg_tablet"
         android:gravity="center"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
