--- a/project/src/main/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/main/res/values-sw600dp/tablet_themes.xml
@@ -31,13 +31,15 @@
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
     </style>
 
-    <style name="V2.Theme.Activity.TabletLaunch">
+    <style name="V2.Theme.Activity.TabletLaunchBase">
         <item name="android:windowBackground">@color/tablet_launch_bg</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="waypointFragmentTopMargin">23dp</item>
     </style>
+
+    <style name="V2.Theme.Activity.TabletLaunch" parent="V2.Theme.Activity.TabletLaunchBase" />
 
     <style name="V2.Theme.Activity.TabletResults">
         <item name="android:windowActionBarOverlay">true</item>
