--- a/project/src/main/res/layout/fragment_tablet_results_hotel_list.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_hotel_list.xml
@@ -39,7 +39,7 @@
             android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
             android:gravity="center_vertical|right"
             android:paddingLeft="8dp"
-            android:textColor="#6a6a6a"
+            android:textColor="@color/tablet_sort_filter_text_selector"
             android:textSize="12dp"
             android:textAllCaps="true"
             app:textStyle="bold" />
