--- a/project/src/main/res/values-sw600dp/colors.xml
+++ b/project/src/main/res/values-sw600dp/colors.xml
@@ -35,6 +35,8 @@
     <color name="tablet_hotel_urgency_msg_selected_unpressed_overlay">#2a538c</color>
     <color name="tablet_hotel_urgency_msg_pressed_selected_overlay">#3971bf</color>
     <color name="tablet_hotel_urgency_msg_pressed_unselected_overlay">#2a538c</color>
+    <color name="tablet_hotel_sort_filter_text">#6a6a6a</color>
+    <color name="tablet_hotel_sort_filter_text_disabled">#336a6a6a</color>
 
     <!-- Tablet Flights -->
     <color name="tablet_flight_filter_text_color">#4c5156</color>
