3508. Sort & Filter disabled when in Reviews
Adding pressed states, drawableLeft icons to sort & filter and done buttons.

--- a/project/src/main/res/layout/fragment_hotel_filters.xml
+++ b/project/src/main/res/layout/fragment_hotel_filters.xml
@@ -29,7 +29,9 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:text="@string/Done"
-            android:textColor="#FF0B4EA4"
+            android:textColor="@color/tablet_sort_filter_done_selector"
+            android:drawableLeft="@drawable/tablet_sort_filter_done_icon_selector"
+            android:drawablePadding="10dp"
             android:textSize="18sp"
             app:textStyle="light" />
 
