--- a/project/src/main/res/layout-sw600dp/snippet_booking_overview_traveler.xml
+++ b/project/src/main/res/layout-sw600dp/snippet_booking_overview_traveler.xml
@@ -14,7 +14,8 @@
         android:layout_height="@dimen/checkout_data_button_icon_size"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="@dimen/checkout_info_container_padding"
-        android:src="@drawable/ic_tablet_checkout_generic_traveler" />
+        android:duplicateParentState="true"
+        android:src="@drawable/ic_checkout_generic_traveler" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/traveler_empty_text_view"
