--- a/project/src/main/res/layout/include_wallet_button.xml
+++ b/project/src/main/res/layout/include_wallet_button.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.WalletButton xmlns:android="http://schemas.android.com/apk/res/android"
+                                          xmlns:app="http://schemas.android.com/apk/res-auto"
                                           android:id="@+id/wallet_container"
                                           android:layout_width="match_parent"
                                           android:layout_height="wrap_content">
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/wallet_promo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +21,8 @@
         android:paddingTop="10dp"
         android:text="@string/wallet_promo_offer"
         android:textColor="@drawable/wallet_promo_text"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        app:textStyle="light"/>
 
     <ImageButton
         android:id="@+id/wallet_button"
