--- a/project/src/main/res/layout/fragment_booking_overview.xml
+++ b/project/src/main/res/layout/fragment_booking_overview.xml
@@ -240,6 +240,17 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="16dp"
                     android:textColor="@android:color/white" />
+
+                <TextView
+                    android:id="@+id/resort_fee_disclaimer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@android:color/white"
+                    android:visibility="gone" />
             </com.expedia.bookings.widget.LinearLayout>
 
             <View
