--- a/project/src/main/res/layout/fragment_results_gde_flights.xml
+++ b/project/src/main/res/layout/fragment_results_gde_flights.xml
@@ -39,13 +39,21 @@
             android:textColor="#666666"
             app:textStyle="light" />
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/flight_trends_tool_tip_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:src="@drawable/ic_flighttrends_info"
-            android:visibility="gone" />
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:duplicateParentState="true"
+                android:paddingLeft="12dp"
+                android:src="@drawable/flighttrends_info_icon" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
