--- a/project/src/main/res/values-sw720dp/dimens.xml
+++ b/project/src/main/res/values-sw720dp/dimens.xml
@@ -150,6 +150,7 @@
     <dimen name="tablet_checkout_trip_bucket_expanded_padding_x">18dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_expanded_padding_major_y">24dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_expanded_padding_minor_y">10dp</dimen>
+    <dimen name="tablet_wallet_promo_height">25dp</dimen>
 
     <!-- CVV Screen -->
     <dimen name="cvv_finish_booking_container_height">200dp</dimen>
