--- a/project/src/main/res/layout/air_attach_banner.xml
+++ b/project/src/main/res/layout/air_attach_banner.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/air_attach_banner_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="vertical"
         android:layout_marginBottom="15dp"
-        android:visibility="gone" >
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/airattach_orange_bg"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <com.expedia.bookings.widget.TextView
                 android:layout_width="wrap_content"
@@ -28,15 +28,15 @@
             <com.expedia.bookings.widget.TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:drawableLeft="@drawable/temp_airattach_curve"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:drawableLeft="@drawable/temp_airattach_curve" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical"
-                android:padding="4dp"
-                android:layout_gravity="center">
+                android:padding="4dp">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/air_attach_text_view"
@@ -58,14 +58,14 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_gravity="center"
-                android:background="@drawable/expires"
                 android:layout_margin="8dp"
-                android:paddingTop="3dp"
+                android:background="@drawable/expires"
+                android:orientation="vertical"
                 android:paddingBottom="3dp"
                 android:paddingLeft="6dp"
-                android:paddingRight="6dp" >
+                android:paddingRight="6dp"
+                android:paddingTop="3dp">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/air_attach_expires_text_view"
@@ -82,10 +82,10 @@
                     android:drawablePadding="2dp"
                     android:textColor="@color/price_change_air_attach"
                     android:textSize="12dp"
-                    app:textStyle="medium"/>
+                    app:textStyle="medium" />
 
             </LinearLayout>
 
         </LinearLayout>
-    </RelativeLayout>
+    </FrameLayout>
 </merge>
