--- a/project/src/main/res/layout/fragment_tablet_confirmation.xml
+++ b/project/src/main/res/layout/fragment_tablet_confirmation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,20 +7,20 @@
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="@integer/tablet_checkout_forms_left_margin_weight"/>
+        android:layout_weight="@integer/tablet_checkout_forms_left_margin_weight" />
 
     <LinearLayout
-        android:layout_width="0dp"
         style="@style/V2.Fragment.Tablet.Confirmation"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="2"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <FrameLayout
             style="@style/V2.Fragment.Tablet.Confirmation"
             android:layout_width="@dimen/confirmation_width"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <com.expedia.bookings.widget.OptimizedImageView
                 android:id="@+id/confirmation_image_view"
@@ -34,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/confirmation_image_height"
                 android:background="@drawable/bg_tablet_confirmation_main"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -42,7 +41,7 @@
                     android:layout_marginBottom="12dp"
                     android:layout_marginTop="40dp"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/confirmation_title_text"
@@ -76,17 +75,18 @@
                     android:id="@+id/confirmation_itinerary_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:layout_marginBottom="18dp"
+                    android:layout_marginTop="15dp"
                     android:gravity="center"
                     android:textColor="#A6A4A4"
                     android:textSize="15sp"
                     app:textStyle="condensed" />
 
-                <include layout="@layout/air_attach_banner"
-                    android:layout_gravity="center_horizontal"
+                <include
+                    layout="@layout/air_attach_banner"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal" />
 
             </LinearLayout>
 
@@ -105,7 +105,7 @@
             android:layout_width="@dimen/confirmation_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/confirmation_book_next_container"
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/bg_tablet_confirmation_button_left"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <View
                     android:layout_width="0dp"
@@ -147,7 +147,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_tablet_confirmation_button_left"
                 android:orientation="horizontal"
-                android:visibility="gone" >
+                android:visibility="gone">
 
                 <View
                     android:layout_width="0dp"
@@ -157,15 +157,15 @@
                 <com.expedia.bookings.widget.TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:drawableLeft="@drawable/ic_tablet_confirmation_book_next_arrow"
-                    android:drawablePadding="10dp"
-                    android:layout_gravity="center"/>
+                    android:drawablePadding="10dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="10dp" >
+                    android:padding="10dp">
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/add_hotel_text_view"
@@ -182,10 +182,10 @@
                         android:id="@+id/with_discounts_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="-2dp"
                         android:gravity="center"
                         android:textColor="#374F6E"
-                        android:textSize="12dp"
-                        android:layout_marginTop="-2dp"/>
+                        android:textSize="12dp" />
 
                 </LinearLayout>
 
@@ -210,7 +210,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/bg_tablet_confirmation_button_right"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <View
                     android:layout_width="0dp"
