--- a/project/src/main/res/layout/actionbar_legend.xml
+++ b/project/src/main/res/layout/actionbar_legend.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
-    android:background="@drawable/bg_actionbar_button"
+    android:background="?android:attr/selectableItemBackground"
     android:drawableLeft="@drawable/ic_legend"
     android:drawablePadding="8dp"
     android:gravity="center_vertical"
