--- a/project/src/main/res/layout/include_button_bar.xml
+++ b/project/src/main/res/layout/include_button_bar.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/bg_actionbar_button"
+        android:background="?android:attr/selectableItemBackground"
         android:drawableLeft="?attr/skin_actionBarCheckMarkDrawable"
         android:gravity="center_vertical"
         android:paddingBottom="6dp"
