--- a/project/src/main/res/layout/fragment_itin_card.xml
+++ b/project/src/main/res/layout/fragment_itin_card.xml
@@ -47,7 +47,7 @@
                 android:layout_width="48dp"
                 android:layout_height="46dp"
                 android:layout_marginRight="3dp"
-                android:background="@drawable/list_selector_holo_dark"
+                android:background="?android:attr/selectableItemBackground"
                 android:paddingBottom="6dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
