--- a/project/src/main/res/layout/widget_image_dropdown.xml
+++ b/project/src/main/res/layout/widget_image_dropdown.xml
@@ -6,7 +6,7 @@
         android:layout_width="62dp"
         android:layout_height="48dp"
         android:layout_marginRight="6dp"
-        android:background="@drawable/abs__item_background_holo_dark"
+        android:background="?android:attr/selectableItemBackground"
         android:paddingBottom="8dp"
         android:paddingLeft="3dp"
         android:paddingRight="8dp"
